# selenium-python-project

./: README.md  pyproject.toml
src/driver/: assertion.py  browserdriver.py  chromedriver.py  chromedrivermanager.py  interactions.py
tests/: test_login.py
tests/page/: SignInPage.py
