[project]
name = "selenium-python-project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Yang Cao", email = "395500850@qq.com"},
]
dependencies = [
    "pytest>=8.2.1",
    "selenium>=4.21.0",
    "webdriver-manager>=4.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
